backend/HeadlineAPI/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> expression
Rule 1     expression -> LPAREN expression RPAREN
Rule 2     expression -> expression AND expression
Rule 3     expression -> expression OR expression
Rule 4     expression -> constraint
Rule 5     value -> NUM_VAL
Rule 6     value -> STRING_VAL
Rule 7     constraint -> FIELD_NAME EQ value
Rule 8     constraint -> FIELD_NAME NEQ value
Rule 9     constraint -> FIELD_NAME GE value
Rule 10    constraint -> FIELD_NAME GT value
Rule 11    constraint -> FIELD_NAME LE value
Rule 12    constraint -> FIELD_NAME LT value

Terminals, with rules where they appear

AND                  : 2
EQ                   : 7
FIELD_NAME           : 7 8 9 10 11 12
GE                   : 9
GT                   : 10
LE                   : 11
LPAREN               : 1
LT                   : 12
NEQ                  : 8
NUM_VAL              : 5
OR                   : 3
RPAREN               : 1
STRING_VAL           : 6
error                : 

Nonterminals, with rules where they appear

constraint           : 4
expression           : 1 2 2 3 3 0
value                : 7 8 9 10 11 12

Parsing method: LALR

state 0

    (0) S' -> . expression
    (1) expression -> . LPAREN expression RPAREN
    (2) expression -> . expression AND expression
    (3) expression -> . expression OR expression
    (4) expression -> . constraint
    (7) constraint -> . FIELD_NAME EQ value
    (8) constraint -> . FIELD_NAME NEQ value
    (9) constraint -> . FIELD_NAME GE value
    (10) constraint -> . FIELD_NAME GT value
    (11) constraint -> . FIELD_NAME LE value
    (12) constraint -> . FIELD_NAME LT value

    LPAREN          shift and go to state 2
    FIELD_NAME      shift and go to state 4

    expression                     shift and go to state 1
    constraint                     shift and go to state 3

state 1

    (0) S' -> expression .
    (2) expression -> expression . AND expression
    (3) expression -> expression . OR expression

    AND             shift and go to state 5
    OR              shift and go to state 6


state 2

    (1) expression -> LPAREN . expression RPAREN
    (1) expression -> . LPAREN expression RPAREN
    (2) expression -> . expression AND expression
    (3) expression -> . expression OR expression
    (4) expression -> . constraint
    (7) constraint -> . FIELD_NAME EQ value
    (8) constraint -> . FIELD_NAME NEQ value
    (9) constraint -> . FIELD_NAME GE value
    (10) constraint -> . FIELD_NAME GT value
    (11) constraint -> . FIELD_NAME LE value
    (12) constraint -> . FIELD_NAME LT value

    LPAREN          shift and go to state 2
    FIELD_NAME      shift and go to state 4

    expression                     shift and go to state 7
    constraint                     shift and go to state 3

state 3

    (4) expression -> constraint .

    AND             reduce using rule 4 (expression -> constraint .)
    OR              reduce using rule 4 (expression -> constraint .)
    $end            reduce using rule 4 (expression -> constraint .)
    RPAREN          reduce using rule 4 (expression -> constraint .)


state 4

    (7) constraint -> FIELD_NAME . EQ value
    (8) constraint -> FIELD_NAME . NEQ value
    (9) constraint -> FIELD_NAME . GE value
    (10) constraint -> FIELD_NAME . GT value
    (11) constraint -> FIELD_NAME . LE value
    (12) constraint -> FIELD_NAME . LT value

    EQ              shift and go to state 8
    NEQ             shift and go to state 9
    GE              shift and go to state 10
    GT              shift and go to state 11
    LE              shift and go to state 12
    LT              shift and go to state 13


state 5

    (2) expression -> expression AND . expression
    (1) expression -> . LPAREN expression RPAREN
    (2) expression -> . expression AND expression
    (3) expression -> . expression OR expression
    (4) expression -> . constraint
    (7) constraint -> . FIELD_NAME EQ value
    (8) constraint -> . FIELD_NAME NEQ value
    (9) constraint -> . FIELD_NAME GE value
    (10) constraint -> . FIELD_NAME GT value
    (11) constraint -> . FIELD_NAME LE value
    (12) constraint -> . FIELD_NAME LT value

    LPAREN          shift and go to state 2
    FIELD_NAME      shift and go to state 4

    expression                     shift and go to state 14
    constraint                     shift and go to state 3

state 6

    (3) expression -> expression OR . expression
    (1) expression -> . LPAREN expression RPAREN
    (2) expression -> . expression AND expression
    (3) expression -> . expression OR expression
    (4) expression -> . constraint
    (7) constraint -> . FIELD_NAME EQ value
    (8) constraint -> . FIELD_NAME NEQ value
    (9) constraint -> . FIELD_NAME GE value
    (10) constraint -> . FIELD_NAME GT value
    (11) constraint -> . FIELD_NAME LE value
    (12) constraint -> . FIELD_NAME LT value

    LPAREN          shift and go to state 2
    FIELD_NAME      shift and go to state 4

    expression                     shift and go to state 15
    constraint                     shift and go to state 3

state 7

    (1) expression -> LPAREN expression . RPAREN
    (2) expression -> expression . AND expression
    (3) expression -> expression . OR expression

    RPAREN          shift and go to state 16
    AND             shift and go to state 5
    OR              shift and go to state 6


state 8

    (7) constraint -> FIELD_NAME EQ . value
    (5) value -> . NUM_VAL
    (6) value -> . STRING_VAL

    NUM_VAL         shift and go to state 18
    STRING_VAL      shift and go to state 19

    value                          shift and go to state 17

state 9

    (8) constraint -> FIELD_NAME NEQ . value
    (5) value -> . NUM_VAL
    (6) value -> . STRING_VAL

    NUM_VAL         shift and go to state 18
    STRING_VAL      shift and go to state 19

    value                          shift and go to state 20

state 10

    (9) constraint -> FIELD_NAME GE . value
    (5) value -> . NUM_VAL
    (6) value -> . STRING_VAL

    NUM_VAL         shift and go to state 18
    STRING_VAL      shift and go to state 19

    value                          shift and go to state 21

state 11

    (10) constraint -> FIELD_NAME GT . value
    (5) value -> . NUM_VAL
    (6) value -> . STRING_VAL

    NUM_VAL         shift and go to state 18
    STRING_VAL      shift and go to state 19

    value                          shift and go to state 22

state 12

    (11) constraint -> FIELD_NAME LE . value
    (5) value -> . NUM_VAL
    (6) value -> . STRING_VAL

    NUM_VAL         shift and go to state 18
    STRING_VAL      shift and go to state 19

    value                          shift and go to state 23

state 13

    (12) constraint -> FIELD_NAME LT . value
    (5) value -> . NUM_VAL
    (6) value -> . STRING_VAL

    NUM_VAL         shift and go to state 18
    STRING_VAL      shift and go to state 19

    value                          shift and go to state 24

state 14

    (2) expression -> expression AND expression .
    (2) expression -> expression . AND expression
    (3) expression -> expression . OR expression

    AND             reduce using rule 2 (expression -> expression AND expression .)
    $end            reduce using rule 2 (expression -> expression AND expression .)
    RPAREN          reduce using rule 2 (expression -> expression AND expression .)
    OR              shift and go to state 6

  ! OR              [ reduce using rule 2 (expression -> expression AND expression .) ]
  ! AND             [ shift and go to state 5 ]


state 15

    (3) expression -> expression OR expression .
    (2) expression -> expression . AND expression
    (3) expression -> expression . OR expression

    AND             reduce using rule 3 (expression -> expression OR expression .)
    OR              reduce using rule 3 (expression -> expression OR expression .)
    $end            reduce using rule 3 (expression -> expression OR expression .)
    RPAREN          reduce using rule 3 (expression -> expression OR expression .)

  ! AND             [ shift and go to state 5 ]
  ! OR              [ shift and go to state 6 ]


state 16

    (1) expression -> LPAREN expression RPAREN .

    AND             reduce using rule 1 (expression -> LPAREN expression RPAREN .)
    OR              reduce using rule 1 (expression -> LPAREN expression RPAREN .)
    $end            reduce using rule 1 (expression -> LPAREN expression RPAREN .)
    RPAREN          reduce using rule 1 (expression -> LPAREN expression RPAREN .)


state 17

    (7) constraint -> FIELD_NAME EQ value .

    AND             reduce using rule 7 (constraint -> FIELD_NAME EQ value .)
    OR              reduce using rule 7 (constraint -> FIELD_NAME EQ value .)
    $end            reduce using rule 7 (constraint -> FIELD_NAME EQ value .)
    RPAREN          reduce using rule 7 (constraint -> FIELD_NAME EQ value .)


state 18

    (5) value -> NUM_VAL .

    AND             reduce using rule 5 (value -> NUM_VAL .)
    OR              reduce using rule 5 (value -> NUM_VAL .)
    $end            reduce using rule 5 (value -> NUM_VAL .)
    RPAREN          reduce using rule 5 (value -> NUM_VAL .)


state 19

    (6) value -> STRING_VAL .

    AND             reduce using rule 6 (value -> STRING_VAL .)
    OR              reduce using rule 6 (value -> STRING_VAL .)
    $end            reduce using rule 6 (value -> STRING_VAL .)
    RPAREN          reduce using rule 6 (value -> STRING_VAL .)


state 20

    (8) constraint -> FIELD_NAME NEQ value .

    AND             reduce using rule 8 (constraint -> FIELD_NAME NEQ value .)
    OR              reduce using rule 8 (constraint -> FIELD_NAME NEQ value .)
    $end            reduce using rule 8 (constraint -> FIELD_NAME NEQ value .)
    RPAREN          reduce using rule 8 (constraint -> FIELD_NAME NEQ value .)


state 21

    (9) constraint -> FIELD_NAME GE value .

    AND             reduce using rule 9 (constraint -> FIELD_NAME GE value .)
    OR              reduce using rule 9 (constraint -> FIELD_NAME GE value .)
    $end            reduce using rule 9 (constraint -> FIELD_NAME GE value .)
    RPAREN          reduce using rule 9 (constraint -> FIELD_NAME GE value .)


state 22

    (10) constraint -> FIELD_NAME GT value .

    AND             reduce using rule 10 (constraint -> FIELD_NAME GT value .)
    OR              reduce using rule 10 (constraint -> FIELD_NAME GT value .)
    $end            reduce using rule 10 (constraint -> FIELD_NAME GT value .)
    RPAREN          reduce using rule 10 (constraint -> FIELD_NAME GT value .)


state 23

    (11) constraint -> FIELD_NAME LE value .

    AND             reduce using rule 11 (constraint -> FIELD_NAME LE value .)
    OR              reduce using rule 11 (constraint -> FIELD_NAME LE value .)
    $end            reduce using rule 11 (constraint -> FIELD_NAME LE value .)
    RPAREN          reduce using rule 11 (constraint -> FIELD_NAME LE value .)


state 24

    (12) constraint -> FIELD_NAME LT value .

    AND             reduce using rule 12 (constraint -> FIELD_NAME LT value .)
    OR              reduce using rule 12 (constraint -> FIELD_NAME LT value .)
    $end            reduce using rule 12 (constraint -> FIELD_NAME LT value .)
    RPAREN          reduce using rule 12 (constraint -> FIELD_NAME LT value .)

